--- a/myprofile.html
+++ b/myprofile.html
@@ -13,6 +13,7 @@
         }
         div{
             background-color: rgb(135, 196, 240);
+            border-radius: 2%;
         }
         .N{
             background-color: rgba(123, 152, 173, 0.749);
@@ -68,7 +69,7 @@
             <a href=""><b>LinkedIn</b></a>
         </li>
         <li>
-            <button ><a href="contectMy.html" target="_blank"><b>contect Me</b></a> </button>
+            <button ><a href="contectMy.html" target="_blank"><b>CONTACT ME</b></a> </button>
             <!-- <a href="contectMe.html" /target="_blank"><b>contect Me</b></a> -->
         </li>
     </ul>
@@ -140,7 +141,6 @@
     beginners or professionals.
     </div>
     <h2>technologies </h2>
-
     <h2>contect </h2>
     <div>
     You can reach out to me via email or through my professional platforms. (You can add your email or links to
@@ -148,6 +148,5 @@
     </div>
     <hr>
     <p>&copy; ABDULLAH ALSHARABI 2025/2/20 😊</p>
-
 </body>
 </html>
