--- a/contectMy.html
+++ b/contectMy.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+        background-image: url(IMG_7748.jpg);
+        }
+    </style>
 </head>
 <body>
      
@@ -13,7 +18,7 @@
     </h3>
     <ul>
         <li><a href="tel:+967774237262">+967774237262</a></li>
-        <li><a href="mileto:abdullahalsharaby@gmail.com">abdullahalsharaby@gmail.com</a></li>
+        <li><a href="mileto:abdullahaalsharaby@gmail.com">abdullahaalsharaby@gmail.com</a></li>
     </ul>
     <a href="myprofile.html" target="_blank">Home</a>
      <hr>
