--- a/myprofile.html
+++ b/myprofile.html
@@ -54,7 +54,7 @@
             enhance the digital world</i> . With a strong foundation in programming and problem-solving, I strive to
         create high-quality software that meets modern technological demands.
   </DIV><br>
-   <a href="Dowonload_CV.pdf" target="_blank" align="left">Dowonload_CV</a>
+   <a href="Dowonload_CV1.pdf" target="_blank" align="left">Dowonload_CV</a>
          <BR><BR>
     <dir>
         
@@ -141,12 +141,14 @@
     beginners or professionals.
     </div>
     <h2>technologies </h2>
-    <h2>contect </h2>
+    <h2>contact </h2>
     <div>
     You can reach out to me via email or through my professional platforms. (You can add your email or links to
     LinkedIn, GitHub, etc.)
+    
     </div>
+     <button ><a href="contectMy.html" target="_blank"><b>CONTACT ME</b></a> </button>
     <hr>
-    <p>&copy; ABDULLAH ALSHARABI 2025/2/20 😊</p>
+    <p>&copy; ABDULLAH ALSHARABI 2025/2/17 😊</p>
 </body>
 </html>
