--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <p><b style="color: black;">your city</b></p>
         <select class="se" name="fruite"   size="3" multiple>
         <option  class="se" value="">ALHODEIDAH</option>
-        <option  value=""selected>TIZE</option>
+        <option  value=""selected>TAIZ</option>
         <option  value="">SANA'A</option>
         <option  value="">ADEN</option>
-        <option  value=""  >IB</option>
+        <option  value=""  >IBB</option>
         <option  value=""  >DOMAR</option>
         <option  value=""  >ALMAHRA</option>
       </select><br> <br>
