--- a/myprofile.html
+++ b/myprofile.html
@@ -34,7 +34,7 @@
       
     </style>
 </head>
-<body bgcolor="#fffffff5dc" >
+<body  >
     <h1  align="center">
         <img  src="IMG_7748.jpg" width ="225px" height="225px" alt="non" title="الصورة الشخصية">
 
